# kinect_pathing

./: CMakeLists.txt
src/: concave_hull_2d.cpp  extract_indices.cpp  extract_path.cpp  projection.cpp
